# OntoBuilder

./: .env.example  .gitignore  LICENSE.md  README.md  catalog-v001.xml  contracts-basic-ontology.ttl  pyproject.toml  streamlit_app.py
docs/: design-system.md  ontology-agent.md
examples/: retirements-ontology-draft.json  sample-nda.ttl
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  designTokens.test.ts  designTokens.ts  graphModel.test.ts  graphModel.ts  ontology.test.ts  ontology.ts  reviewState.test.ts  reviewState.ts  styles.css  tokens.css  types.ts
frontend/src/components/: CommandPalette.tsx  EntityInspector.tsx  FirstRunSuggestions.tsx  GenerationProgress.tsx  InspectorPrimitives.tsx  OntologyCanvas.tsx  OntologyPromptDock.tsx  ProjectDrawer.tsx  ReadinessBar.tsx  RelationshipGraph.tsx  ReviewSidebar.tsx  StatementComposer.tsx  StatementInspector.tsx  Toasts.tsx  statementText.tsx
frontend/src/utils/: text.ts
ontology_agent/: __init__.py  agent.py  api.py  cli.py  config.py  expansion.py  knowledge.py  projects.py  repair.py  review.py  revision.py  schema.py  service.py  skills.py  streaming.py  tools.py
ontology_agent/skills/contract-management-ontology/: SKILL.md
scripts/: generate_ontology_visuals.py  validate_ontology.py
shapes/: contracts-core.shapes.ttl
tests/: test_agent.py  test_api.py  test_config.py  test_schema.py  test_streaming.py  test_streamlit_app.py  test_tools.py
visualizations/: core-class-hierarchy.dot  core-property-map.dot  index.html  sample-nda-graph.dot
(+11 files in other folders)
