[project]
name = "contract-ingelligence-ontology-agent"
version = "0.1.0"
description = "Agno-based ontology drafting agent with structured JSON output."
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.9",
    "fastapi>=0.136",
    "google-genai>=1.0",
    "openai>=2.0.0",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rdflib>=7.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
vector = [
    "chromadb>=1.1",
]
test = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
ontology-agent = "ontology_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ontology_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
